# geometryos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_MANIFEST.md  CHANGELOG.md  CODEREVIEW_SKILL.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_PRINCIPLES.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pr10_finalize.py  pr8-finalize.trigger  pr8-import-fix.trigger  pr8-ruff-fix.trigger
.github/pr10_payload/: chunk_00  chunk_01  chunk_02  chunk_03  chunk_04  chunk_05  chunk_06  chunk_07a  chunk_07b  chunk_07c  chunk_07d  chunk_08  manual-dispatch-note  trigger
.github/workflows/: apply-pr2-doc-fix.yml  apply-pr2.yml  apply-pr3.yml  ci.yml  diagnose-pr2.yml  format-pr3.yml  generate-lock.yml  implement-pr9.yml  pr5-format.yml  pr5-refresh-lock.yml  pr6-format.yml  pr7-apply.yml  pr7-readme.yml  pr7-regenerate.yml  pr8-finalize.yml  pr8-import-fix.yml  pr8-ruff-fix.yml  pr9-implementation.yml  release.yml
benchmarks/: README.md
benchmarks/gir_to_svg/: altitude_001.expected.json  arbitrary_triangle_001.expected.json  median_001.expected.json  triangle_001.expected.json  triangle_001.gir.json
benchmarks/gir_to_tikz/: altitude_001.expected.json  (+6 more)
docs/: APPLICATION_PIPELINE.md  ARCHITECTURE.md  COMPATIBILITY.md  ERROR_MODEL.md  GIR_SPEC.md  INTEGRATION_GUIDE.md  MVP_ROADMAP.md  PHASE_1_INTEGRATION_READY_PLAN.md  RELEASE_PROCESS.md
release/: manifest.json
schemas/: gir-0.2.schema.json  gir.schema.json  openapi.v1.json
scripts/: __init__.py  _patch_pr7_readme.py  apply_pr2.py  apply_pr3.py  audit_runtime_dependencies.py  build_release.py  check_openapi_compatibility.py  check_release_version.py  container_smoke.py  export_openapi.py  export_release_manifest.py  export_schema.py  export_tutorboard_contracts.py  extract_release_notes.py  finalize_pr5_docs.py  generate_python_sbom.py  implement_pr9.py  package_smoke.py  pr9_implement.py  print_version.py  release_common.py  release_smoke.py  run_benchmarks.py  verify.py
tests/: conftest.py  test_api_application_delegation.py  test_api_generate.py  test_api_health.py  test_api_pipeline.py  test_api_render.py  test_api_validate.py  test_architecture_boundaries.py  test_benchmarks.py  test_cli.py  test_gir_models.py  test_gir_versioning.py  test_imports.py  test_layout.py  test_package_smoke_contract.py  test_render_benchmarks.py  test_schema_export.py  test_semantic_validation.py  test_svg_renderer.py  test_text_to_gir_adapter.py  test_tikz_renderer.py  test_verify_contract.py
(+147 files in other folders)
