[project]
name = "gir"
version = "0.1.0"
description = "GIR Geometry Compiler skeleton"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7,<3",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "typer>=0.12",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27"]

[project.scripts]
gir = "gir_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/gir_core",
  "src/gir_render",
  "src/gir_ai",
  "src/gir_application",
  "src/gir_api",
  "src/gir_cli",
  "src/gir_benchmarks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
