[project]
name = "gir"
version = "0.2.0"
description = "GIR-first geometry compiler service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "anyio>=4,<5",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/ArtemLevin/geometryos"
Repository = "https://github.com/ArtemLevin/geometryos"
Issues = "https://github.com/ArtemLevin/geometryos/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
  "pip-audit==2.10.1",
]

[project.scripts]
gir = "gir_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/gir_meta",
  "src/gir_core",
  "src/gir_render",
  "src/gir_ai",
  "src/gir_application",
  "src/gir_api",
  "src/gir_cli",
  "src/gir_benchmarks",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
